Pagebreaking to end.

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -237,7 +237,7 @@ When looking at either scenario's data as a whole (the VR section of the seated 
 %	\end{center}
 %\end{figure}
 
-\begin{figure}
+\begin{figure}[h]
 	\begin{center}
 	\includegraphics[width=\textwidth]{1/6_pitch_yaw_2up.png}
 	\caption{Pitch and yaw against time for participant 6 in seated VR and parallel reality scenarios.}
@@ -874,7 +874,9 @@ When comparing head pitch and yaw data between the RW and VR periods within the 
 
 When comparing head movement as mean standard deviation weighted by duration of the periods (tables \ref{mean-sd-yaw-1-3} and \ref{mean-sd-yaw-1-4}) between the RW and VR portions of the two parallel reality scenarios, this relationship is seen much more substantially in scenario 1-4. Part of this is due to the fact that all participants in scenario 1-4 showed less change in yaw in the RW periods than in the RW periods of scenario 1-3. Whilst this apparent increased comfort with larger head movements in VR in scenario 1-4 could be explained due to familiarity, the magnitude of the difference between scenario 1-3 and scenario 1-4 makes it hard to believe that familiarity is the sole reason, especially considering that scenario 1-4 was not a drastically different experience to scenario 1-3 as only the addition of transition 4 differentiated it from scenario 1-3. One possible contributor, as mentioned by one participant during the interview stage, is that they spent more time perceiving VR in scenario 1-4 in order to \textit{avoid} the automatic transition that would occur when perceiving RW.
 
-\begin{table}
+\vspace{1cm}
+
+\begin{table}[h]
 \begin{center}
 \begin{minipage}[t]{.45\linewidth}
 \begin{center}
@@ -948,7 +950,7 @@ When comparing head movement as mean standard deviation weighted by duration of 
 
 Some participants showed behaviour where they `tried out' the different transition styles before adopting one that they then used predominantly throughout the rest of the scenario. Participant 11 showed this behaviour in its most extreme case during scenario 1-3, when s/he tried each transition style just once at the very beginning of the scenario and then only used transition 3 (via the right trigger \texttt{[RT]}) throughout the rest of the scenario (figure \ref{11-pitch-yaw-1-3.png}). However when s/he came to perform scenario 1-4, s/he seemed to take this opportunity as a second chance to experiment with all of the different transition styles, using transitions 1, 2 and 3 at different points throughout the scenario (figure \ref{11-pitch-yaw-1-4.png}).
 
-\begin{figure}
+\begin{figure}[h]
 	\begin{center}
 	\includegraphics[width=\textwidth]{2.1/11-pitch-yaw-1-3.png}
 	\caption{Pitch and yaw against time for participant 11 in scenario 1-3, showing RW/VR transitions.}
@@ -956,7 +958,7 @@ Some participants showed behaviour where they `tried out' the different transiti
 	\end{center}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[h]
 	\begin{center}
 	\includegraphics[width=\textwidth]{2.1/11-pitch-yaw-1-4.png}
 	\caption{Pitch and yaw against time for participant 11 in scenario 1-3, showing RW/VR transitions.}
@@ -978,7 +980,7 @@ Some participants showed behaviour where they `tried out' the different transiti
 
 Other participants continued to use all available transition styles throughout a session, such as participant 13 during scenario 1-3 (figure \ref{13-pitch-yaw-1-3.png}). This was one of the longest individual sessions, with the participant exploring the RW and VR chapels in tandem in parallel reality via the Mirrorshades platform for over 8.5 minutes. During the interview s/he reported preferring transition 3 via the right trigger \texttt{[RT]}, which is corroborated by the data. S/he triggered this transition more than transition 1 or 2 (25 times total, compared to 20 for transition 1 and 14 for transition 2) and spent longer perceiving VR via transition 3 than the others (103 seconds total compared to 81.5 seconds for transition 1 and 20 seconds for transition 2, with a mean of 4.12 seconds for each period using transition 3, 4.075 seconds for transition 1 and 1.429 seconds for transition 2).
 
-\begin{figure}
+\begin{figure} [h]
 	\begin{center}
 	\includegraphics[width=\textwidth]{2.1/13-pitch-yaw-1-3.png}
 	\caption{Pitch and yaw against time for participant 13 in scenario 1-3, showing RW/VR transitions.}
@@ -987,6 +989,8 @@ Other participants continued to use all available transition styles throughout a
 \end{figure}
 
 %=====================
+
+\newpage
 
 \subsubsection{Walking and Head Movement}
 
@@ -1015,6 +1019,8 @@ As seen in the results to the stage 1 evaluation, there is also a correlation in
 \subsubsection{Use of Intermediary Opacities}
 
 Confirming responses during the post task interviews, several participants made use of the analogue selectable transition (transition 3, accessed via the right trigger \texttt{[RT]}) to view both RW and VR environments together, by pausing with the trigger partially depressed. Figures \ref{10-1-4_opacity.png} and \ref{12-1-4_opacity.png} show examples, for participants 10 and 12 respectively undertaking scenario 1-4, of the opacity of the objects upon which the camera feeds were rendered. An opacity of 1.0 means that the camera feeds were completely opaque and that the participant was thus perceiving 100\% RW visual stimuli, while an opacity of 0 means that the camera feeds were invisible and that the participant was perceiving 100\% VR visual stimuli. As well as using the analogue selectable transition to view both environments at once, there are incidents where it seems that the participant used it to control the speed at which a transition from 100\% RW to 100\% VR was performed. We can see that participant 10 (figure \ref{10-1-4_opacity.png}) uses transition 3 at around 250 seconds to perform a transition to a 100\% VR view, but at a slower rate than the linear interpolated transition such as can be seen taking place just before at around 245 seconds. This greater level of control in how quickly transitions were performed was raised in interviews as one reason why this particular transition was favoured by participants.
+
+\vspace{2cm}
 
 \begin{figure}[h]
 	\begin{center}
