--- a/00_acknowledgements/acknowledgements.tex
+++ b/00_acknowledgements/acknowledgements.tex
@@ -2,7 +2,7 @@ Amongst others, thanks go to:
 
 \begin{itemize}
 
-	\item Alan Miller, Colin Allison, Miguel Nacenta and Ishbel Duncan for supervising this research.
+	\item Alan Miller, Colin Allison and Miguel Nacenta for supervising this research.
 	
 	\item EPSRC and the School of Computer Science at the University of St Andrews for funding the endeavour.
 	
